--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -28,6 +28,8 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: #60696f;
+  font-family: "Albert Sans";
 }
 
 a {
@@ -37,6 +39,6 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
 }
