--- a/frontend/src/app/components/FileUpload.module.css
+++ b/frontend/src/app/components/FileUpload.module.css
@@ -29,14 +29,13 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  padding: 10px 27px;
+  padding: 10px;
   font-size: 30px;
 }
 
 .xbutton {
-  height: 10px;
-  width: 10px;
-  color: gray;
+  height: 24px;
+  /* background-color: red; */
 }
 
 .xbutton:hover {
@@ -47,7 +46,7 @@
   border-radius: 8px;
   border: 2px dashed #bdc9d2;
   width: 90%;
-  height: 45%;
+  height: 42.5%;
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -108,13 +107,15 @@
   gap: 8px;
 }
 
+.checkRow:hover{
+  cursor:pointer;
+}
+
 .checkBox {
-  width: 32px;
-  height: 32px;
-  border-color: #057e6f;
-  background-color: #057e6f;
-  border-width: 2px;
-  border-radius: 4px;
+  width: 22px;
+  height: 22px;
+  accent-color: #057e6f;
+  border-radius: 2px;
 }
 
 .commentsWrapper {
@@ -131,4 +132,61 @@
   border: 1px solid var(--Stroke-2, #d0d7de);
   padding: 12px;
   resize: none;
+}
+
+.buttonsRow{
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.buttonsRow:hover{
+  cursor: pointer;
+}
+
+.buttonsWrapper{
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
+.buttonsWrapper:hover{
+  cursor: pointer;
+
+}
+
+.cancelButton{
+  display: flex;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  border: 1px solid var(--Stroke-2, #D0D7DE);
+  background: var(--Background-1, #FFF);
+}
+
+.uploadButton{
+  display: flex;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  color: #FAFAFA;
+  background: var(--Primary, #057E6F);
+}
+
+.filenameWrapper{
+  border-radius: 4px;
+  border: 1px solid var(--Stroke-3, #BDC9D2);
+  background: var(--Background-1, #FFF);
+  display: flex;
+  padding: var(--Spacing-xs, 4px) var(--Spacing-s, 8px);
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  font-size: 13px;
+  margin: 6px;
 }
