--- a/frontend/src/app/login/page.module.css
+++ b/frontend/src/app/login/page.module.css
@@ -57,3 +57,13 @@
 
 .subtext {
 }
+
+.signInButton {
+  width: 100%;
+  display: flex;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+}
