--- a/frontend/src/app/login/page.module.css
+++ b/frontend/src/app/login/page.module.css
@@ -45,11 +45,14 @@
 .input {
   width: 100%;
   height: 51px;
+  padding: 15px;
   margin: 10px 0;
   display: inline-block;
   background-color: white;
   border: 1px solid #d0d7de;
   border-radius: 8px;
+
+  color: #3a3c3d;
 }
 
 .subtitle2 {
