--- a/frontend/src/app/login/page.module.css
+++ b/frontend/src/app/login/page.module.css
@@ -11,10 +11,6 @@
   width: 632px;
   height: 644px;
   border: 1px solid #d0d7de;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
   padding: 48px 64px;
   border-radius: 8px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
@@ -25,6 +21,7 @@
   width: 504px;
   height: 145px;
   background-color: #252525;
+  border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,7 +43,7 @@
   width: 100%;
   height: 51px;
   padding: 15px;
-  margin: 10px 0;
+  margin: 10px 0 16px;
   display: inline-block;
   background-color: white;
   border: 1px solid #d0d7de;
@@ -56,6 +53,7 @@
 }
 
 .subtitle2 {
+  margin-top: 24px;
 }
 
 .subtext {
