--- a/frontend/src/app/signup/page.module.css
+++ b/frontend/src/app/signup/page.module.css
@@ -7,31 +7,37 @@
   align-items: center;
 }
 
-.form0 {
+.formContainer {
   width: 542px;
-  height: 492px;
-  border: 1px solid #d0d7de;
-  padding: 48px 64px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
   border-radius: 8px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
+}
+
+.form {
+  height: 347px;
+  border: 1px solid #d0d7de;
+  padding: 48px 64px;
+
   color: #3a3c3d;
+  font-size: 14px;
 }
 
 .titleBar {
-  width: 504px;
   height: 145px;
   background-color: #252525;
   border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 24px;
 }
 
 .subtitle {
   color: #3a3c3d;
   font-family: "Albert Sans";
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 600;
   margin-bottom: 16px;
 }
@@ -90,6 +96,7 @@
   background: var(--Background-1, #fff);
   margin-top: 16px;
   margin-bottom: 12px;
+  color: #4d5358;
 }
 
 .rememberMeContainer {
