--- a/frontend/src/app/signup/page.module.css
+++ b/frontend/src/app/signup/page.module.css
@@ -17,7 +17,7 @@
 }
 
 .form {
-  height: 347px;
+  height: auto;
   border: 1px solid #d0d7de;
   padding: 48px 64px;
 
@@ -47,15 +47,18 @@
 
 .input {
   width: 100%;
-  height: 51px;
+  height: 33px;
   padding: 15px;
   margin: 10px 0 16px;
   display: inline-block;
   background-color: white;
   border: 1px solid #d0d7de;
   border-radius: 8px;
-
   color: #3a3c3d;
+}
+
+.doubleInput {
+  display: flex;
 }
 
 .subtitle2 {
@@ -63,9 +66,6 @@
   align-items: flex-start;
   gap: 24px;
   align-self: stretch;
-}
-
-.subtext {
 }
 
 .continueButton {
