styled veteran dashboard

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -28,7 +28,7 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: #60696f;
+  color: #4d5358;
   font-family: "Albert Sans";
 }
 
