--- a/frontend/src/app/adminview/page.module.css
+++ b/frontend/src/app/adminview/page.module.css
@@ -1,3 +1,9 @@
+.container {
+  height: 100%;
+  background: var(--Neutral-Base-White, #fafafa);
+  min-height: 100vh;
+}
+
 .page {
   display: flex;
   width: 100%;
@@ -5,9 +11,6 @@
   justify-content: center;
   align-items: flex-start;
   flex-shrink: 0;
-  height: 100vh;
-
-  background: var(--Neutral-Base-White, #fafafa);
 }
 
 .frame {
