--- a/frontend/src/app/components/ProfilePicture.module.css
+++ b/frontend/src/app/components/ProfilePicture.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 96px;
+  min-width: 96px;
   height: 96px;
   border-radius: 48px;
   background: var(--Background-3, #e9ebed);
