--- a/frontend/src/app/components/Button.module.css
+++ b/frontend/src/app/components/Button.module.css
@@ -10,4 +10,12 @@
   border-radius: 8px;
   border: 1px solid var(--Stroke-2, #d0d7de);
   background: var(--Background-1, #fff);
+
+  color: var(--Text-2, #4d5358);
+  /* body medium */
+  font-family: "Albert Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
