--- a/frontend/src/app/components/UserProfile.module.css
+++ b/frontend/src/app/components/UserProfile.module.css
@@ -135,3 +135,13 @@
   font-weight: 400;
   line-height: normal;
 }
+
+.userList .unassigned {
+  color: var(--Danger-Emphasis, #b80037);
+  /* body medium */
+  font-family: "Albert Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
