updates to components and userModel

--- a/frontend/src/app/components/Program.module.css
+++ b/frontend/src/app/components/Program.module.css
@@ -18,9 +18,9 @@
 }
 
 .battleBuddies {
-  color: #92400e;
-  border: 0px solid rgba(146, 64, 14, 0.3);
-  background: rgba(146, 64, 14, 0.1);
+  color: #0093ebe5;
+  border: 0px solid #4ea5d94d;
+  background: #4ea5d91a;
 }
 
 .advocacy {
