--- a/frontend/src/app/components/Button.module.css
+++ b/frontend/src/app/components/Button.module.css
@@ -19,3 +19,21 @@
   font-weight: 500;
   line-height: normal;
 }
+
+.button:hover {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.05) 100%), #fff;
+  cursor: pointer;
+}
+
+.button.filled {
+  background: var(--Primary, #057e6f);
+
+  color: var(--Neutral-Base-White, #fafafa);
+
+  /* body medium */
+  font-family: "Albert Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
