use local storage to determine the current user, use loading

--- a/frontend/src/app/components/UserProfile.module.css
+++ b/frontend/src/app/components/UserProfile.module.css
@@ -338,6 +338,10 @@
 
   height: fit-content;
 }
+.volunteerNotes .postNoteButton:hover {
+  cursor: pointer;
+}
+
 .volunteerNotes .postedNotes {
   display: flex;
   flex-direction: column;
