--- a/frontend/src/app/components/UnreadActivities.module.css
+++ b/frontend/src/app/components/UnreadActivities.module.css
@@ -10,6 +10,7 @@
   border-radius: 8px;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
   margin: 0;
+  list-style: none;
 }
 
 .selectBox {
@@ -26,6 +27,7 @@
   align-items: center;
   cursor: pointer;
   user-select: none;
+  justify-content: space-between;
 }
 
 .dropdownItem {
@@ -52,6 +54,21 @@
   margin-bottom: 8px;
 
   color: #4d5358;
+}
+
+.activityCount {
+  background-color: #fce5ec;
+  color: #b80037;
+  border-radius: 50%;
+  /* padding: 4px 8px; */
+  width: 22px;
+  height: 22px;
+  font-size: 12px;
+  font-weight: 600;
+  font-family: "Albert Sans";
+  text-align: center;
+
+  margin-left: 8px;
 }
 
 .button {
