--- a/frontend/src/app/components/UnreadActivities.module.css
+++ b/frontend/src/app/components/UnreadActivities.module.css
@@ -4,17 +4,17 @@
 }
 
 .customDropdown {
-  position: absolute;
+  width: 100%;
   background-color: white;
   border: 1px solid #d0d7de;
   border-radius: 8px;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
   margin: 0;
   list-style: none;
+  /* border-image-source: linear-gradient(180deg, #e1ecf7 0%, #a2e3ff 50%, #acb9ff 100%); */
 }
 
 .selectBox {
-  width: 1024px;
   padding: 24px;
 
   color: var(--Text-2, #3a3c3d);
@@ -31,7 +31,6 @@
 }
 
 .dropdownItem {
-  width: 976px;
   margin: 0px 24px;
   padding: 24px 0px;
   color: #4d5358;
