--- a/frontend/src/app/components/UnreadActivities.module.css
+++ b/frontend/src/app/components/UnreadActivities.module.css
@@ -6,12 +6,12 @@
 .customDropdown {
   width: 100%;
   background-color: white;
-  border: 1px solid #d0d7de;
+  border: 1px solid;
+  border-image: linear-gradient(180deg, #e1ecf7 0%, #a2e3ff 50%, #acb9ff 100%) 1;
   border-radius: 8px;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
   margin: 0;
   list-style: none;
-  /* border-image-source: linear-gradient(180deg, #e1ecf7 0%, #a2e3ff 50%, #acb9ff 100%); */
 }
 
 .selectBox {
@@ -49,10 +49,17 @@
   font-size: 13px;
   line-height: 15.6px;
   letter-spacing: 0%;
-  margin-top: 16px;
-  margin-bottom: 8px;
+  margin: 16px 0px 8px 0px;
 
   color: #4d5358;
+}
+
+.description {
+  font-weight: 500;
+  font-size: 14px;
+  margin-left: 56px;
+
+  color: #60696f;
 }
 
 .activityCount {
@@ -82,10 +89,27 @@
   border: 1px solid #d0d7de;
   border-radius: 8px;
   padding: 8px;
+  margin-left: 8px;
+  cursor: pointer;
 }
 
 .button:hover {
   background-color: #f0f0f0;
+}
+
+.urgentButton {
+  background-color: #f9a825;
+  margin-left: "0px";
+  font-weight: "500";
+  color: #4d5358;
+  font-size: 14px;
+  line-height: 16.8px;
+  display: inline-block;
+  width: 116;
+  height: 33;
+  border-radius: 8px;
+  padding: 4px 8px;
+  margin-bottom: 16px;
 }
 
 .horizontalDiv {
@@ -96,8 +120,17 @@
 }
 
 .label {
+  font-weight: 500;
   padding: 4px 8px;
+  margin-left: 4px;
   color: #80a4ed;
   border: 1px solid #80a4ed;
   border-radius: 16px;
+}
+
+.announcement {
+  background-color: #f9a8251a;
+  border: 1px dashed #f9a825;
+  border-radius: 4px;
+  padding: 8px 16px;
 }
