--- a/frontend/src/app/components/SignUpForm/page.module.css
+++ b/frontend/src/app/components/SignUpForm/page.module.css
@@ -1,5 +1,5 @@
 .page {
-  background-image: url("../../../../public/signUpBackground.svg");
+  background-image: url("/signUpBackground.svg");
   background-size: cover;
   min-height: 100vh;
   width: 100%;
