--- a/frontend/src/app/login/page.module.css
+++ b/frontend/src/app/login/page.module.css
@@ -1,5 +1,5 @@
 .page {
-  background-image: url("../../../public/signUpBackground.svg");
+  background-image: url("/signUpBackground.svg");
   height: 100vh;
   width: 100%;
   display: flex;
