--- a/frontend/src/app/components/VeteranDashboard.module.css
+++ b/frontend/src/app/components/VeteranDashboard.module.css
@@ -41,7 +41,8 @@
   gap: 10px;
   border-radius: var(--Spacing-s, 8px);
   border: 1px solid rgba(26, 133, 56, 0.2);
-  background: linear-gradient(0deg, rgba(26, 133, 56, 0.1) 0%, rgba(26, 133, 56, 0.1) 100%), #fafafa;
+  background:
+    linear-gradient(0deg, rgba(26, 133, 56, 0.1) 0%, rgba(26, 133, 56, 0.1) 100%), #fafafa;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   color: var(--Success-Emphasis, #1a8538);
